ppl/ass1/initial/src/main/bkit/parser/.antlr/BKITParser.py
# Generated from c:\Users\Phuong\Desktop\201\PPL\ass1\initial\src\main\bkit\parser\BKIT.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class BKITParser ( Parser ):

    grammarFileName = "BKIT.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'='", "<INVALID>", "'Body'", "'Break'", 
                     "'Continue'", "'Do'", "'Else'", "'ElseIf'", "'EndBody'", 
                     "'EndIf'", "'EndFor'", "'EndWhile'", "'For'", "'Function'", 
                     "'If'", "'Parameter'", "'Return'", "'Then'", "'Var'", 
                     "'While'", "'EndDo'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'('", "')'", 
                     "'['", "']'", "':'", "'.'", "','", "';'", "'{'", "'}'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "ID", "BODY", "BREAK", "CONTINUE", 
                      "DO", "ELSE", "ELSEIF", "ENDBODY", "ENDIF", "ENDFOR", 
                      "ENDWHILE", "FOR", "FUNCTION", "IF", "PARAMETER", 
                      "RETURN_KEY", "THEN", "VAR", "WHILE", "ENDDO", "UN_PRE2", 
                      "BIN_INFIX_LEFT1", "BIN_INFIX_LEFT2", "SIGN_BOTH", 
                      "BIN_INFIX_LEFT3", "BIN_INFIX_NONE", "LP", "RP", "LSB", 
                      "RSB", "CL", "DOT", "CM", "SM", "LCB", "RCB", "INTEGER", 
                      "FLOAT", "BOOLEAN", "STRING", "COMMENT", "WSPP", "NL", 
                      "ERROR_CHAR", "UNCLOSE_STRING", "ILLEGAL_ESCAPE", 
                      "UNTERMINATED_COMMENT" ]

    RULE_program = 0
    RULE_global_varideclare = 1
    RULE_var_list = 2
    RULE_var_item = 3
    RULE_initial_value = 4
    RULE_arraylit = 5
    RULE_simple_array = 6
    RULE_function_declare = 7
    RULE_para_list = 8
    RULE_para_item = 9
    RULE_statement = 10
    RULE_assign_statement = 11
    RULE_expression = 12
    RULE_rela = 13
    RULE_logi = 14
    RULE_adding = 15
    RULE_multi = 16
    RULE_logih = 17
    RULE_signn = 18
    RULE_endofex = 19
    RULE_lhs = 20
    RULE_array_cell = 21
    RULE_if_statement = 22
    RULE_if_then_stmt = 23
    RULE_else_if_stmt = 24
    RULE_else_stmt = 25
    RULE_for_statement = 26
    RULE_while_statement = 27
    RULE_dowhile_statement = 28
    RULE_break_statement = 29
    RULE_continue_statement = 30
    RULE_call_statement = 31
    RULE_return_statement = 32

    ruleNames =  [ "program", "global_varideclare", "var_list", "var_item", 
                   "initial_value", "arraylit", "simple_array", "function_declare", 
                   "para_list", "para_item", "statement", "assign_statement", 
                   "expression", "rela", "logi", "adding", "multi", "logih", 
                   "signn", "endofex", "lhs", "array_cell", "if_statement", 
                   "if_then_stmt", "else_if_stmt", "else_stmt", "for_statement", 
                   "while_statement", "dowhile_statement", "break_statement", 
                   "continue_statement", "call_statement", "return_statement" ]

    EOF = Token.EOF
    T__0=1
    ID=2
    BODY=3
    BREAK=4
    CONTINUE=5
    DO=6
    ELSE=7
    ELSEIF=8
    ENDBODY=9
    ENDIF=10
    ENDFOR=11
    ENDWHILE=12
    FOR=13
    FUNCTION=14
    IF=15
    PARAMETER=16
    RETURN_KEY=17
    THEN=18
    VAR=19
    WHILE=20
    ENDDO=21
    UN_PRE2=22
    BIN_INFIX_LEFT1=23
    BIN_INFIX_LEFT2=24
    SIGN_BOTH=25
    BIN_INFIX_LEFT3=26
    BIN_INFIX_NONE=27
    LP=28
    RP=29
    LSB=30
    RSB=31
    CL=32
    DOT=33
    CM=34
    SM=35
    LCB=36
    RCB=37
    INTEGER=38
    FLOAT=39
    BOOLEAN=40
    STRING=41
    COMMENT=42
    WSPP=43
    NL=44
    ERROR_CHAR=45
    UNCLOSE_STRING=46
    ILLEGAL_ESCAPE=47
    UNTERMINATED_COMMENT=48

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def global_varideclare(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Global_varideclareContext)
            else:
                return self.getTypedRuleContext(BKITParser.Global_varideclareContext,i)


        def function_declare(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Function_declareContext)
            else:
                return self.getTypedRuleContext(BKITParser.Function_declareContext,i)


        def getRuleIndex(self):
            return BKITParser.RULE_program




    def program(self):

        localctx = BKITParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.VAR:
                self.state = 66
                self.global_varideclare()
                self.state = 71
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 75
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.FUNCTION:
                self.state = 72
                self.function_declare()
                self.state = 77
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Global_varideclareContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(BKITParser.VAR, 0)

        def CL(self):
            return self.getToken(BKITParser.CL, 0)

        def var_list(self):
            return self.getTypedRuleContext(BKITParser.Var_listContext,0)


        def SM(self):
            return self.getToken(BKITParser.SM, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_global_varideclare




    def global_varideclare(self):

        localctx = BKITParser.Global_varideclareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_global_varideclare)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.match(BKITParser.VAR)
            self.state = 79
            self.match(BKITParser.CL)
            self.state = 80
            self.var_list()
            self.state = 81
            self.match(BKITParser.SM)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_item(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Var_itemContext)
            else:
                return self.getTypedRuleContext(BKITParser.Var_itemContext,i)


        def CM(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.CM)
            else:
                return self.getToken(BKITParser.CM, i)

        def getRuleIndex(self):
            return BKITParser.RULE_var_list




    def var_list(self):

        localctx = BKITParser.Var_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_var_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self.var_item()
            self.state = 88
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.CM:
                self.state = 84
                self.match(BKITParser.CM)
                self.state = 85
                self.var_item()
                self.state = 90
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_itemContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def initial_value(self):
            return self.getTypedRuleContext(BKITParser.Initial_valueContext,0)


        def LSB(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.LSB)
            else:
                return self.getToken(BKITParser.LSB, i)

        def INTEGER(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.INTEGER)
            else:
                return self.getToken(BKITParser.INTEGER, i)

        def RSB(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.RSB)
            else:
                return self.getToken(BKITParser.RSB, i)

        def getRuleIndex(self):
            return BKITParser.RULE_var_item




    def var_item(self):

        localctx = BKITParser.Var_itemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_var_item)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.state = 91
                self.match(BKITParser.ID)
                pass

            elif la_ == 2:
                self.state = 92
                self.match(BKITParser.ID)
                self.state = 96 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 93
                    self.match(BKITParser.LSB)
                    self.state = 94
                    self.match(BKITParser.INTEGER)
                    self.state = 95
                    self.match(BKITParser.RSB)
                    self.state = 98 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==BKITParser.LSB):
                        break

                pass


            self.state = 104
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKITParser.T__0:
                self.state = 102
                self.match(BKITParser.T__0)
                self.state = 103
                self.initial_value()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Initial_valueContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def INTEGER(self):
            return self.getToken(BKITParser.INTEGER, 0)

        def STRING(self):
            return self.getToken(BKITParser.STRING, 0)

        def BOOLEAN(self):
            return self.getToken(BKITParser.BOOLEAN, 0)

        def FLOAT(self):
            return self.getToken(BKITParser.FLOAT, 0)

        def arraylit(self):
            return self.getTypedRuleContext(BKITParser.ArraylitContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_initial_value




    def initial_value(self):

        localctx = BKITParser.Initial_valueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_initial_value)
        try:
            self.state = 112
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKITParser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 106
                self.match(BKITParser.ID)
                pass
            elif token in [BKITParser.INTEGER]:
                self.enterOuterAlt(localctx, 2)
                self.state = 107
                self.match(BKITParser.INTEGER)
                pass
            elif token in [BKITParser.STRING]:
                self.enterOuterAlt(localctx, 3)
                self.state = 108
                self.match(BKITParser.STRING)
                pass
            elif token in [BKITParser.BOOLEAN]:
                self.enterOuterAlt(localctx, 4)
                self.state = 109
                self.match(BKITParser.BOOLEAN)
                pass
            elif token in [BKITParser.FLOAT]:
                self.enterOuterAlt(localctx, 5)
                self.state = 110
                self.match(BKITParser.FLOAT)
                pass
            elif token in [BKITParser.LCB]:
                self.enterOuterAlt(localctx, 6)
                self.state = 111
                self.arraylit()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArraylitContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LCB(self):
            return self.getToken(BKITParser.LCB, 0)

        def arraylit(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.ArraylitContext)
            else:
                return self.getTypedRuleContext(BKITParser.ArraylitContext,i)


        def RCB(self):
            return self.getToken(BKITParser.RCB, 0)

        def CM(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.CM)
            else:
                return self.getToken(BKITParser.CM, i)

        def simple_array(self):
            return self.getTypedRuleContext(BKITParser.Simple_arrayContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_arraylit




    def arraylit(self):

        localctx = BKITParser.ArraylitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_arraylit)
        self._la = 0 # Token type
        try:
            self.state = 126
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 114
                self.match(BKITParser.LCB)
                self.state = 115
                self.arraylit()
                self.state = 120
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==BKITParser.CM:
                    self.state = 116
                    self.match(BKITParser.CM)
                    self.state = 117
                    self.arraylit()
                    self.state = 122
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 123
                self.match(BKITParser.RCB)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 125
                self.simple_array()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Simple_arrayContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LCB(self):
            return self.getToken(BKITParser.LCB, 0)

        def RCB(self):
            return self.getToken(BKITParser.RCB, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.ID)
            else:
                return self.getToken(BKITParser.ID, i)

        def INTEGER(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.INTEGER)
            else:
                return self.getToken(BKITParser.INTEGER, i)

        def STRING(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.STRING)
            else:
                return self.getToken(BKITParser.STRING, i)

        def BOOLEAN(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.BOOLEAN)
            else:
                return self.getToken(BKITParser.BOOLEAN, i)

        def FLOAT(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.FLOAT)
            else:
                return self.getToken(BKITParser.FLOAT, i)

        def CM(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.CM)
            else:
                return self.getToken(BKITParser.CM, i)

        def getRuleIndex(self):
            return BKITParser.RULE_simple_array




    def simple_array(self):

        localctx = BKITParser.Simple_arrayContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_simple_array)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self.match(BKITParser.LCB)
            self.state = 129
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BKITParser.ID) | (1 << BKITParser.INTEGER) | (1 << BKITParser.FLOAT) | (1 << BKITParser.BOOLEAN) | (1 << BKITParser.STRING))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 134
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.CM:
                self.state = 130
                self.match(BKITParser.CM)
                self.state = 131
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BKITParser.ID) | (1 << BKITParser.INTEGER) | (1 << BKITParser.FLOAT) | (1 << BKITParser.BOOLEAN) | (1 << BKITParser.STRING))) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 136
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 137
            self.match(BKITParser.RCB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_declareContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(BKITParser.FUNCTION, 0)

        def CL(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.CL)
            else:
                return self.getToken(BKITParser.CL, i)

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def BODY(self):
            return self.getToken(BKITParser.BODY, 0)

        def ENDBODY(self):
            return self.getToken(BKITParser.ENDBODY, 0)

        def DOT(self):
            return self.getToken(BKITParser.DOT, 0)

        def PARAMETER(self):
            return self.getToken(BKITParser.PARAMETER, 0)

        def para_list(self):
            return self.getTypedRuleContext(BKITParser.Para_listContext,0)


        def global_varideclare(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Global_varideclareContext)
            else:
                return self.getTypedRuleContext(BKITParser.Global_varideclareContext,i)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.StatementContext)
            else:
                return self.getTypedRuleContext(BKITParser.StatementContext,i)


        def getRuleIndex(self):
            return BKITParser.RULE_function_declare




    def function_declare(self):

        localctx = BKITParser.Function_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_function_declare)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self.match(BKITParser.FUNCTION)
            self.state = 140
            self.match(BKITParser.CL)
            self.state = 141
            self.match(BKITParser.ID)
            self.state = 145
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKITParser.PARAMETER:
                self.state = 142
                self.match(BKITParser.PARAMETER)
                self.state = 143
                self.match(BKITParser.CL)
                self.state = 144
                self.para_list()


            self.state = 147
            self.match(BKITParser.BODY)
            self.state = 148
            self.match(BKITParser.CL)
            self.state = 152
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.VAR:
                self.state = 149
                self.global_varideclare()
                self.state = 154
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 158
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BKITParser.ID) | (1 << BKITParser.BREAK) | (1 << BKITParser.CONTINUE) | (1 << BKITParser.DO) | (1 << BKITParser.FOR) | (1 << BKITParser.IF) | (1 << BKITParser.RETURN_KEY) | (1 << BKITParser.WHILE) | (1 << BKITParser.UN_PRE2) | (1 << BKITParser.SIGN_BOTH) | (1 << BKITParser.LP) | (1 << BKITParser.INTEGER) | (1 << BKITParser.FLOAT) | (1 << BKITParser.BOOLEAN) | (1 << BKITParser.STRING))) != 0):
                self.state = 155
                self.statement()
                self.state = 160
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 161
            self.match(BKITParser.ENDBODY)
            self.state = 162
            self.match(BKITParser.DOT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Para_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def para_item(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Para_itemContext)
            else:
                return self.getTypedRuleContext(BKITParser.Para_itemContext,i)


        def CM(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.CM)
            else:
                return self.getToken(BKITParser.CM, i)

        def getRuleIndex(self):
            return BKITParser.RULE_para_list




    def para_list(self):

        localctx = BKITParser.Para_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_para_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 164
            self.para_item()
            self.state = 169
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.CM:
                self.state = 165
                self.match(BKITParser.CM)
                self.state = 166
                self.para_item()
                self.state = 171
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Para_itemContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def INTEGER(self):
            return self.getToken(BKITParser.INTEGER, 0)

        def STRING(self):
            return self.getToken(BKITParser.STRING, 0)

        def BOOLEAN(self):
            return self.getToken(BKITParser.BOOLEAN, 0)

        def FLOAT(self):
            return self.getToken(BKITParser.FLOAT, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_para_item




    def para_item(self):

        localctx = BKITParser.Para_itemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_para_item)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 172
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BKITParser.ID) | (1 << BKITParser.INTEGER) | (1 << BKITParser.FLOAT) | (1 << BKITParser.BOOLEAN) | (1 << BKITParser.STRING))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assign_statement(self):
            return self.getTypedRuleContext(BKITParser.Assign_statementContext,0)


        def if_statement(self):
            return self.getTypedRuleContext(BKITParser.If_statementContext,0)


        def for_statement(self):
            return self.getTypedRuleContext(BKITParser.For_statementContext,0)


        def while_statement(self):
            return self.getTypedRuleContext(BKITParser.While_statementContext,0)


        def dowhile_statement(self):
            return self.getTypedRuleContext(BKITParser.Dowhile_statementContext,0)


        def break_statement(self):
            return self.getTypedRuleContext(BKITParser.Break_statementContext,0)


        def continue_statement(self):
            return self.getTypedRuleContext(BKITParser.Continue_statementContext,0)


        def call_statement(self):
            return self.getTypedRuleContext(BKITParser.Call_statementContext,0)


        def SM(self):
            return self.getToken(BKITParser.SM, 0)

        def return_statement(self):
            return self.getTypedRuleContext(BKITParser.Return_statementContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_statement




    def statement(self):

        localctx = BKITParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_statement)
        try:
            self.state = 185
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 174
                self.assign_statement()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 175
                self.if_statement()
                pass
